--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: "Pixeboy";
+  src: url(C:\Users\I532602\Coding\Proxima_Website\src\assets\pixeboyFont.ttf);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --standardFontColor: #f5f5f5;
+  --darkBlueColor: #01142c;
+  --lightBlueColor: #024897;
+  --mustardColor: #ffce4e;
+  --whiteColor: #f6f0f0;
+  --titleFont: "Pixeboy";
+  --textFont: "Pixeboy";
+  letter-spacing: 0.1em;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  border-style: none;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  color: var(--standardFontColor);
+}
+
+body {
+  background: var(--darkBlueColor);
+}
+
+h1,
+h2,
+h3,
+input,
+p,
+div,
+a,
+span,
+button {
+  font-family: var(--textFont);
 }
