--- a/src/components/navbar/Dropdown.css
+++ b/src/components/navbar/Dropdown.css
@@ -1,13 +1,15 @@
 /*****************************************************/
 /* Default                                           */
 /*****************************************************/
-.footerContainer {
-  grid-area: footer;
+.dropdown {
+  position: absolute;
+  z-index: 9000;
+  top: 0;
+  transform: translateY(-100%);
 }
 
-.footer {
-  background: var(--lightBlueColor);
-  border-top: var(--borderLightMustard);
+.dropdownSubmenu {
+  margin-left: 0.5em;
 }
 
 /*****************************************************/
@@ -27,6 +29,10 @@
 /*****************************************************/
 
 @media (min-width: 992px) {
+  .dropdown {
+    top: unset;
+    transform: translateY(0%);
+  }
 }
 
 /*****************************************************/
