--- a/src/components/navbar/NavMenu.css
+++ b/src/components/navbar/NavMenu.css
@@ -1,14 +1,20 @@
 /*****************************************************/
 /* Default                                           */
 /*****************************************************/
-.mainContainer {
-  grid-area: main;
+.navMenuContainer {
+  grid-area: navbar;
+  position: sticky;
+  bottom: 0;
+  /* width: 100%; */
+  height: 56px;
+  background: var(--darkBlueColor);
+  border-top: var(--borderDarkMustard);
+  border-bottom: none;
 }
 
-.test {
-  width: 200px;
-  height: 170px;
-  margin: 5px 0;
+.navMenu {
+  display: flex;
+  gap: 1em;
 }
 
 /*****************************************************/
@@ -28,6 +34,14 @@
 /*****************************************************/
 
 @media (min-width: 992px) {
+  .navMenuContainer {
+    top: 0;
+    width: auto;
+    height: 64px;
+    border-top: none;
+    border-bottom: var(--borderDarkMustard);
+    transition: top 0.3s;
+  }
 }
 
 /*****************************************************/
