--- a/src/components/web3/NavWeb3.css
+++ b/src/components/web3/NavWeb3.css
@@ -1,21 +1,18 @@
 /*****************************************************/
 /* Default                                           */
 /*****************************************************/
-.navbarContainer {
-  grid-area: navbar;
-}
-
-.navbar {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 10vh;
+.navWeb3Container {
+  grid-area: web3;
+  position: sticky;
+  top: 0;
+  /* width: 100%; */
+  height: 56px;
   background: var(--darkBlueColor);
-  border-top: var(--borderDarkMustard);
-  border-bottom: none;
+  border-top: none;
+  border-bottom: var(--borderDarkMustard);
 }
 
-.navMenu {
+.navWeb3 {
   display: flex;
   gap: 1em;
 }
@@ -37,10 +34,13 @@
 /*****************************************************/
 
 @media (min-width: 992px) {
-  .navbar {
+  .navWeb3Container {
     top: 0;
+    width: auto;
+    height: 64px;
     border-top: none;
     border-bottom: var(--borderDarkMustard);
+    transition: top 0.3s;
   }
 }
 
