--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,13 @@
 .App {
   display: grid;
   grid-template-areas:
-    "web3     web3    web3"
-    "leftSide main    rightSide"
-    "footer   footer  footer"
-    "navbar   navbar  navbar";
+    "web3     web3    web3   web3   web3   web3   web3   web3   web3   web3"
+    "leftSide main    main   main   main   main   main   main   main   rightSide"
+    "footer   footer  footer footer footer footer footer footer footer footer"
+    "navbar   navbar  navbar navbar navbar navbar navbar navbar navbar navbar";
   grid-template-rows: 56px minmax(calc(100vh - 112px), auto) auto 56px;
-  grid-template-columns: 0.5fr 9fr 0.5fr;
+  grid-template-columns: repeat(10, 1fr);
+  /* grid-template-columns: 0.5fr 9fr 0.5fr; */
   z-index: 1;
   position: relative;
 }
@@ -36,10 +37,11 @@
 @media (min-width: 992px) {
   .App {
     grid-template-areas:
-      "navbar   web3    web3"
-      "leftSide main    rightSide"
-      "footer   footer  footer";
+      "navbar   navbar  navbar navbar navbar navbar navbar navbar navbar navbar web3 web3 web3 web3 web3 web3 web3 web3 web3 web3"
+      "leftSide leftSide    main   main   main   main   main   main   main main main main main main main main main main rightSide   rightSide"
+      "footer   footer  footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer";
     grid-template-rows: 64px minmax(calc(100vh - 64px), auto) auto;
+    grid-template-columns: repeat(20, 0.5fr);
   }
 }
 
