--- a/src/components/navbar/Dropdown.css
+++ b/src/components/navbar/Dropdown.css
@@ -4,8 +4,12 @@
 .dropdown {
   position: absolute;
   z-index: 9000;
+  width: 100vw;
   top: 0;
+  left: 0;
   transform: translateY(-100%);
+  background: var(--darkMustardColor);
+  border-radius: var(--borderRadius) var(--borderRadius) 0 0;
 }
 
 .dropdownSubmenu {
@@ -30,8 +34,10 @@
 
 @media (min-width: 992px) {
   .dropdown {
-    top: unset;
+    width: 16em;
+    top: 100%;
     transform: translateY(0%);
+    border-radius: 0 0 var(--borderRadius) var(--borderRadius);
   }
 }
 
