--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @font-face {
   font-family: "Pixeboy";
   src: url(C:\Users\I532602\Coding\Proxima_Website\src\assets\pixeboyFont.ttf);
@@ -11,8 +12,8 @@
   --darkMustardColor: #b89439;
   --lightMustardColor: #d3aa43;
   --whiteColor: #eceaea;
-  --titleFont: "Pixeboy";
-  --textFont: "Pixeboy";
+  --titleFont: "Kanit";
+  --textFont: "Kanit";
   --twoColoredMustard: linear-gradient(
     110deg,
     var(--darkMustardColor) 60%,
