--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -6,8 +6,12 @@
 }
 
 .footer {
-  background: var(--lightBlueColor);
+  background: var(--twoColoredBlue);
   border-top: var(--borderLightMustard);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1em;
 }
 
 /*****************************************************/
@@ -27,6 +31,11 @@
 /*****************************************************/
 
 @media (min-width: 992px) {
+  .footer {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    padding-left: 10vw;
+  }
 }
 
 /*****************************************************/
