--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -5,11 +5,11 @@
   grid-area: main;
 }
 
-.test {
+/* .test {
   width: 200px;
   height: 170px;
   margin: 5px 0;
-}
+} */
 
 /*****************************************************/
 /* Small devices (landscape phones, 576px and up)    */
