--- a/src/components/footer/ImpressumSection.css
+++ b/src/components/footer/ImpressumSection.css
@@ -1,23 +1,21 @@
 /*****************************************************/
 /* Default                                           */
 /*****************************************************/
-.dropdown {
-  position: absolute;
-  z-index: 9000;
-  width: 100vw;
-  top: 0;
-  left: 0;
-  transform: translateY(-100%);
-  background: var(--darkMustardColor);
-  border-radius: var(--borderRadius) var(--borderRadius) 0 0;
-  border-top: var(--borderDarkBlue);
-  border-left: var(--borderDarkBlue);
-  border-right: var(--borderDarkBlue);
-  border-bottom: unset;
+.impressumContainer {
+  margin-top: 3em;
+  padding-bottom: 2em;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
 }
 
-.dropdownSubmenu {
-  margin-left: 0.5em;
+.singleImpressum {
+  cursor: pointer;
+  font-size: x-small;
+}
+
+.singleImpressum:hover {
+  color: var(--darkMustardColor);
 }
 
 /*****************************************************/
@@ -37,15 +35,15 @@
 /*****************************************************/
 
 @media (min-width: 992px) {
-  .dropdown {
-    width: 16em;
-    top: 100%;
-    transform: translateY(0%);
-    border-radius: 0 0 var(--borderRadius) var(--borderRadius);
-    border-bottom: var(--borderDarkBlue);
-    border-left: var(--borderDarkBlue);
-    border-top: unset;
-    border-right: var(--borderDarkBlue);
+  .impressumContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
+  }
+
+  .singleImpressum:hover {
+    text-decoration: var(--borderDarkMustard) underline;
+    color: unset;
   }
 }
 
