--- a/src/components/footer/SocialSection.css
+++ b/src/components/footer/SocialSection.css
@@ -1,23 +1,30 @@
 /*****************************************************/
 /* Default                                           */
 /*****************************************************/
-.dropdown {
-  position: absolute;
-  z-index: 9000;
-  width: 100vw;
-  top: 0;
-  left: 0;
-  transform: translateY(-100%);
-  background: var(--darkMustardColor);
-  border-radius: var(--borderRadius) var(--borderRadius) 0 0;
-  border-top: var(--borderDarkBlue);
-  border-left: var(--borderDarkBlue);
-  border-right: var(--borderDarkBlue);
-  border-bottom: unset;
+.socialContainer {
+  margin-top: 3em;
+  display: flex;
+  gap: 1em;
 }
 
-.dropdownSubmenu {
-  margin-left: 0.5em;
+.singleSocial {
+  width: 48px;
+  height: 48px;
+  cursor: pointer;
+}
+
+.twitterLogo,
+.discordLogo,
+.telegramLogo,
+.mediumLogo,
+.redditLogo {
+  position: relative;
+  width: 40px;
+  aspect-ratio: 1;
+  filter: invert(99%) sepia(60%) saturate(118%) hue-rotate(198deg)
+    brightness(113%) contrast(92%);
+  margin: 4px;
+  z-index: 0;
 }
 
 /*****************************************************/
@@ -37,16 +44,6 @@
 /*****************************************************/
 
 @media (min-width: 992px) {
-  .dropdown {
-    width: 16em;
-    top: 100%;
-    transform: translateY(0%);
-    border-radius: 0 0 var(--borderRadius) var(--borderRadius);
-    border-bottom: var(--borderDarkBlue);
-    border-left: var(--borderDarkBlue);
-    border-top: unset;
-    border-right: var(--borderDarkBlue);
-  }
 }
 
 /*****************************************************/
