--- a/src/components/web3/NavWeb3.css
+++ b/src/components/web3/NavWeb3.css
@@ -4,8 +4,9 @@
 .navWeb3Container {
   grid-area: web3;
   position: sticky;
+  z-index: 9000;
   top: 0;
-  height: 56px;
+  height: 64px;
   display: flex;
   align-items: center;
   background: var(--darkBlueColor);
@@ -16,10 +17,6 @@
 .brandLogoWeb3 {
   aspect-ratio: 1;
   width: 40px;
-  margin-top: 4px;
-  margin-right: 4px;
-  margin-bottom: 4px;
-  margin-left: 8px;
 }
 
 .navWeb3 {
@@ -29,6 +26,8 @@
   width: 100%;
   height: 100%;
   gap: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
 }
 
 /*****************************************************/
@@ -58,6 +57,7 @@
 
   .navWeb3 {
     justify-content: flex-end;
+    margin-left: 0;
   }
 
   .brandLogoWeb3 {
