--- a/src/index.css
+++ b/src/index.css
@@ -113,11 +113,11 @@ a {
 }
 
 /* Make images easier to work with */
-img,
+/* img,
 picture {
   max-width: 100%;
   display: block;
-}
+} */
 
 /* Inherit fonts for inputs and buttons */
 input,
