--- a/src/components/carousel/Carousel.css
+++ b/src/components/carousel/Carousel.css
@@ -3,6 +3,7 @@
 /*****************************************************/
 .carouselContainer {
   margin-top: 2em;
+  max-width: 992px;
 }
 
 .swiper,
@@ -142,8 +143,6 @@
 
 @media (min-width: 992px) {
   .carouselContainer {
-    padding-left: 1.4em;
-    padding-right: 1.4em;
   }
 
   .swiper-pagination {
