--- a/src/components/navMenu/Dropdown.css
+++ b/src/components/navMenu/Dropdown.css
@@ -4,7 +4,7 @@
 .dropdown {
   position: absolute;
   z-index: 9000;
-  width: 100vw;
+  width: 100%;
   top: 0;
   left: 0;
   transform: translateY(-100%);
