--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -11,14 +11,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 1em;
+  /* margin-left: 1em;
+  margin-right: 1em; */
+  margin-top: 2em;
 }
 
 /*******************************************************/
 /*Generic Segment***************************************/
 .homeSegment {
   display: flex;
+  flex-direction: column;
   max-width: 992px;
+  margin-bottom: 10em;
+  margin-left: 1em;
+  margin-right: 1em;
 }
 
 .homeSegmentContent {
@@ -28,17 +34,68 @@
 
 .homeSegmentContentTop {
   font-weight: bold;
-  font-size: 4em;
+  font-size: 3em;
 }
 
 .homeSegmentContentMiddle {
-  font-size: 1.5em;
+  font-size: 1em;
+  margin-bottom: 1em;
 }
 
 .homeSegmentContentBottom {
+  display: flex;
+  gap: 1em;
 }
 
 .homeSegmentImage {
+  display: flex;
+  justify-content: center;
+}
+
+/*******************************************************/
+/*Segment 2 specifics***********************************/
+.segment2Background {
+  display: flex;
+  justify-content: center;
+  padding-top: 4em;
+  padding-bottom: 2em;
+  width: 100%;
+  background: var(--lightBlueColor);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 65%, 0% 80.3%);
+}
+
+.segment2.homeSegment {
+  position: relative;
+}
+
+.segment2.homeSegmentContent {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  max-width: 700px;
+}
+
+.segment2.homeSegmentContentTop {
+  font-size: 2em;
+}
+
+/*******************************************************/
+/*Segment 3 specifics***********************************/
+
+.segment3.homeSegmentContentTop {
+  font-size: 2em;
+}
+
+.segment3.homeSegmentContent {
+  margin-left: 0;
+}
+
+.segment3.homeSegmentImage {
+}
+
+#blockchainIcon {
+  aspect-ratio: 1;
+  width: 100%;
 }
 
 /*****************************************************/
@@ -56,8 +113,33 @@
 /*****************************************************/
 /* Large devices (desktops, 992px and up)            */
 /*****************************************************/
-
 @media (min-width: 992px) {
+  .homeSegment {
+    flex-direction: row;
+  }
+
+  .homeSegmentContentTop {
+    font-size: 4em;
+  }
+
+  .homeSegmentContentMiddle {
+    font-size: 1.5em;
+  }
+
+  /*******************************************************/
+  /*Segment 2 specifics***********************************/
+  .segment2Background {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 65%, 0% 100%);
+  }
+
+  /*******************************************************/
+  /*Segment 3 specifics***********************************/
+  .segment3.homeSegmentContent {
+    margin-left: 4em;
+  }
+
+  .segment3.homeSegmentImage {
+  }
 }
 
 /*****************************************************/
