--- a/src/components/navMenu/NavMenu.css
+++ b/src/components/navMenu/NavMenu.css
@@ -78,6 +78,12 @@
   .navMenu {
     width: auto;
   }
+
+  .homeLink {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
 }
 
 /*****************************************************/
