--- a/src/components/tradingModule/TradeModuleBottom.css
+++ b/src/components/tradingModule/TradeModuleBottom.css
@@ -1,9 +1,9 @@
 /*****************************************************/
 /* Default                                           */
 /*****************************************************/
-.mainContainer {
-  min-height: calc(100vh - 142px);
-  position: relative;
+.tradeModuleBottom {
+  text-align: center;
+  padding: 1em 2em 2em 2em;
 }
 
 /*****************************************************/
@@ -23,9 +23,6 @@
 /*****************************************************/
 
 @media (min-width: 992px) {
-  .mainContainer {
-    min-height: calc(100vh - 64px);
-  }
 }
 
 /*****************************************************/
