--- a/src/pages/trade/Trade.css
+++ b/src/pages/trade/Trade.css
@@ -1,9 +1,14 @@
 /*****************************************************/
 /* Default                                           */
 /*****************************************************/
-.mainContainer {
-  min-height: calc(100vh - 142px);
-  position: relative;
+.trade {
+  display: flex;
+  justify-content: center;
+  margin-top: 8vh;
+  /* position: absolute;
+  top: 50;
+  left: 50%;
+  transform: translate(-50%); */
 }
 
 /*****************************************************/
@@ -23,9 +28,6 @@
 /*****************************************************/
 
 @media (min-width: 992px) {
-  .mainContainer {
-    min-height: calc(100vh - 64px);
-  }
 }
 
 /*****************************************************/
